--- a/style.css
+++ b/style.css
@@ -1,13 +1,147 @@
+
+@font-face{
+    font-family: "Broadway Regular";
+    src: url('../fonts/Broadway Regular.ttf') Format('truetype');
+  }
+
+:root {
+    --primaryColor: #96E16B;
+    --mainWhite: #fff;
+    --mainBlack: black;
+    --mainGrey: grey;
+    --mainSpacing: 0.5rem;
+    --secondarySpacing: 0.25rem;
+    --mainTransition: all 0.55s ease-in-out;;
+    --mainRed: rgb(139, 55, 55);
+    --mainBlue: rgb(44, 163, 184);
+    --mainGreen: rgb(92, 194, 172);
+    --secondaryColor: rgb(250, 232, 192);
+    --mainGold: rgb(208, 198, 57);
+    --secondaryGold: rgb(151, 64, 1);
+    --thirdGold: rgb(228, 82, 15);
+  }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }  
+
+
 body {
     margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    color:white;;
-    text-align: center;
     background-color:black;
   }
+
+  .navbar {
+    position: sticky;
+    top: 0;
+    height: 70px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background: black;
+    z-index: 1;
+}
+
+.navbar-center {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2.5rem;
+
+}  
+.nav-icons {
+    font-size: 1.5rem;
+}
+
+.nav-icon {
+    display:none !important;
+}
+
+.fas.fa-bars {
+    display:none !important;
+}
+
+.navbar-nav{
+    display:flex;
+    list-style:none;
+    
+}
+
+.navbar-brand {
+    font-family: "Broadway Regular";
+    height: 50px;
+    padding: 15px 15px;
+    line-height: 20px;
+    font-size: 34px;
+    text-decoration: none;
+    color: white;
+    -webkit-text-stroke: 2px grey;
+}
+
+.navigation{
+    margin-left:0;
+    text-decoration:none;
+    color: var(--mainWhite);
+    font-size: 1rem;
+    padding: .5rem .5rem;
+    cursor: pointer;
+    font-family: "Broadway Regular";
+    transition: var(--mainTransition);
+   
+}
+
+.navactive{
+    border-bottom: var(--mainGrey)1px solid;
+}
+
+.navigation:hover {
+    color: var(--mainGrey) !important;
+    
+  }
+
+.side-nav{
+    font-family: "Broadway Regular";
+    height:100%;
+    width: 0;
+    position: fixed;
+    z-index: 3;
+    top:0;
+    left:0;
+    background-color: #111;
+    opacity: 0.9;
+    overflow-x:hidden;
+    padding-top:60px;
+    transition:0.5s;
+}
+
+.side-nav a{
+    padding: 10px 10px 10px 30px;
+    text-decoration: none;
+    font-size: 22px;
+    color: #ccc;
+    display: block;
+    transition: 0.3s;
+}
+
+.side-nav a:hover{
+    color: var(--mainWhite) !important;;
+}
+
+.side-nav .btn-close{
+    position: absolute;
+    top:0;
+    right: 22px;
+    font-size:36px;
+    margin-left:50px;
+}
+
+#full-cart{
+    font-family: "Broadway Regular";
+}
 
   .title{
     display: flex;
@@ -16,6 +150,8 @@ body {
     color:white;;
     text-align: center;
     margin-top:2rem;
+    font-family: 'Broadway Regular';
+    -webkit-text-stroke: 0.5px grey;
   }
 
   .sub-title{
@@ -24,17 +160,49 @@ body {
     align-items: center;
     color:white;;
     text-align: center;
+    font-family: 'Broadway Regular';
+    -webkit-text-stroke: 0.5px white;
     
   }
   
   
   #scene-container {
+    right:400px;
     position: absolute;
     width: 600px;
     height: 400px;
-    text-align: center;
-    margin-top:13rem;
+    bottom: 250px;
   }
+
+  .link{
+    width: 150px;  
+    padding:20px;
+    font-size: 1.5rem;
+    margin-top: 500px;
+    cursor: pointer;
+    color:white;
+    background-color:black;
+    border: 2px solid grey;
+    transition: var(--mainTransition);
+   
+  }
+
+  .link:hover{
+     
+      width:175px;
+      padding:30px;
+      background-color: white;
+      transition: var(--mainTransition);
+  }
+
+  .link a{
+      cursor:pointer;
+      text-decoration: none;
+      color:grey;
+      font-family: 'Broadway Regular';
+
+  }
+
 
   h1.zoomIn{
     width:100%;
@@ -51,27 +219,184 @@ body {
     z-index:2;
 }
 
- h2.zoomIn{
-    width:100%;
-    position:absolute;
+.hero {
+    min-height: calc(100vh - 60px);
+    background: url("./img/thddegnowords.png") center/cover no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 200px;
+  }
+  .banner {
+    text-align: center;
+    display: inline-block;
+    padding: 2rem;
+    color: var(--mainWhite);
+    font-size: 3.4rem;
+    font-family: 'Broadway Regular';
+    -webkit-text-stroke: 0.5px grey;
+  }
+  .banner-title {
+    font-size: 3.4rem;
     text-transform: uppercase;
-    color:#C0C0C0;
-    font-size: 2rem;
-    margin-top: 65rem;
-    font-weight: bold;
-    letter-spacing: 50px;
-    animation-duration: 9s;
-    animation-iteration-count: 1;
-    z-index:2;
-  
+    letter-spacing: var(--mainSpacing);
+    margin-bottom: 3rem;
+  }
+  .banner-btn {
+    padding: 1rem 3rem;
+    text-transform: uppercase;
+    letter-spacing: var(--mainSpacing);
+    font-size: 1rem;
+    background: var(--primaryColor);
+    color: var(--mainBlack);
+    border: 1px solid var(--primaryColor);
+    transition: var(--mainTransition);
+    cursor: pointer;
+  }
+  .banner-btn:hover {
+    background: transparent;
+    color: var(--primaryColor);
+  }
+
+  .section-title h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 5rem;
+    text-transform: capitalize;
+    letter-spacing: var(--mainSpacing);
+  }
+
+  .bio{
+      margin:4rem;
+  }
+
+  .bio-about{
+      color: var(--mainWhite);
+      font-family: 'Broadway Regular';
+      font-size:20px;
+      line-height:1.5;
+  }
+
+  .quote-container{
+     text-align:center;
+     margin-bottom: 100px;
+      
+  }
+
+  .quote{
+    color: var(--mainGold);
+    font-family: 'Broadway Regular';
+    background: -webkit-linear-gradient(45deg, rgb(255, 81, 0, 1) 30%, rgba(0,128,0,1) 50%, rgba(255,255,0,1) 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+  }
+
+  .sectionid-contact{
+    font-family: 'Broadway Regular';
+    margin: 100px auto 1px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 1.5rem;
+    grid-row-gap: 2rem;
+  }
+
+  article{
+    padding: 4rem 0;
+ }
+
+ .contact-info{
+    font-size:1.5rem;
+    text-align:center;
+    font-family: 'Broadway Regular';
+    color: var(--mainWhite);
+    text-decoration: none;
+    transition: var(--mainTransition);
+  }
+
+  .contact-info:hover{
+    color: var(--thirdGold);
+    transition: var(--mainTransition);
+    -webkit-text-stroke: 0.5px var(--mainGold);
+  }
+
+  .gallery{
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+    margin: 100px 50px 100px 50px;
 }
+
+.gallery img{
+    margin:10px;
+    transition: 1s;
+    width: 100%;
+    border: none !important;
+}
+
+.gallery img:hover{
+    filter: grayscale(100%);
+    transform: scale(1.1);
+}  
+
+h1.gallery-headline{
+  margin-top:50px;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+.img-container{
+    width:300px;
+    height:300px;
+}
+
+footer{
+    margin:0;
+    background-color:var(--mainGrey);
+    color:var(--mainWhite);
+    height: 300px;
+  }
+
+  .copyright{
+    color: var(--mainWhite);
+    text-align:center;
+   }
+   
+   .social-icons{
+      padding:0;
+      text-align:center;
+   }
+   
+   li.color{
+       margin-top:100px;
+       display: inline-block;
+       padding: 20px 80px 40px 80px;
+       font-size: 1.5rem;
+       align-content: space-between;
+      
+   }
+   
+   a.icons{
+       color:white;
+       transition: all 0.5s ease-in-out;
+   }
+   
+   a.icons:hover{
+    color: var(--mainGold);
+   }
 
 @media only screen and (max-width: 768px) and (orientation : portrait) {
 
     #scene-container {
+        left:40px;
         width: 400px;
         height: 200px;
-        margin-top: 10rem;
+        bottom: 350px
+    }
+
+    .link{
+        margin-top: 450px;
     }
 
 
@@ -87,6 +412,134 @@ body {
         margin-top:30rem;
         
     }
+
+}
+
+    @media screen and (max-width: 768px){
+        .navbar-brand {
+          padding-top: 10px;
+          padding-bottom:10px;
+          padding-left:5px;
+          padding-right:5px;
+          font-size: 28px !important;
+      }
+        .gallery img{
+          transition: 1s;
+          width: 250px;
+          border: none !important;
+      }
+      
+      .gallery {
+        text-align: center;
+        margin: 30px 30px;
+      }
+
+      .img-container{
+        margin: auto;
+      }
+       
+        .contact-info{
+          font-size: 1.5rem;
+        }
+        li.color{
+          padding: 20px 20px 20px 20px;
+         
+      }
+        .description_content{
+          padding:20px 0px 20px 0;
+        }
+        .container {
+          margin:auto;
+         
+      }
+      
+          .banner {
+            margin-bottom: 120px;
+            width:500px;
+            height: 255px;
+            text-align: center;
+            display: inline-block;
+            padding: 1rem;
+          }
+      
+          .banner-title {
+              font-size: 87px;
+          }
+      
+          .banner-sub-title {
+              font-size: 1.25rem;
+          }
+        
+          .logo{
+            margin:2rem;
+            width:75%;
+            height:50%;
+          }
+          .bio-about{
+            text-align:center;
+            font-size: 1.25rem;
+            margin:auto;
+          }
+          .images{
+            display: flex;
+            margin: 0 auto;
+          }
+      
+          
+          .image-container{
+            margin-left:auto;
+            margin-right:auto;
+            overflow-x:auto
+          
+          }
+        
+          .navbar-center{
+            padding: 0 .5rem;
+          }
+         
+         
+          .nav-icon {
+           
+            display:block !important;
+            font-size: 1.5rem;
+            cursor:pointer;
+          }
+        .fas.fa-bars {
+           color: white !important;
+            display:block !important;
+            cursor: pointer !important;
+           }
+           .navigation{
+            display: none !important;
+           
+        }
+      
+        .col-md-6 {
+          width: 100%;
+        }
+      
+        img {
+          margin-bottom:10px;
+          
+      }
+      
+      .sectionid-contact{
+        grid-template-columns: 1fr;
+        text-align: center;
+        align-items: center;
+        margin: 50px auto 200px;
+       
+      }
+      
+      #footer{
+        margin-top: 100px;
+      }
+
+      .gallery{
+        grid-template-columns: 1fr;
+        text-align: center;
+        align-items: center;
+      }
 }
 
 @media only screen and (max-width: 748px) and (orientation : landscape) {
