more responsive code

--- a/style.css
+++ b/style.css
@@ -544,10 +544,26 @@ footer{
 
 @media only screen and (max-width: 748px) and (orientation : landscape) {
 
+    .link{
+        position:absolute;
+        margin-top: 310px;
+        opacity:0.7;
+       
+    }
+
+    .link:hover{
+        width:175px;
+        padding:30px;
+        background-color: white;
+        transition: var(--mainTransition);
+    }  
+
     #scene-container {
+        left:105px;
         width: 500px;
         height: 300px;
         margin-top: 3rem;
+        bottom:200px
       
     }
  
@@ -593,21 +609,39 @@ footer{
 
     .link{
         position:absolute;
-        width: 150px;  
-        padding:20px;
-        font-size: 1.5rem;
         margin-top: 275px;
-        cursor: pointer;
-        color:white;
-        background-color:black;
-        border: 2px solid grey;
-        transition: var(--mainTransition);
         opacity:0.7;
        
       }
     
       .link:hover{
-         
+          width:175px;
+          padding:30px;
+          background-color: white;
+          transition: var(--mainTransition);
+      }
+
+}
+
+@media only screen and (max-width: 480px) and (orientation : portrait){
+    #scene-container {
+        left:0;
+        position: absolute;
+        width: 360px;
+        height: 180px;
+        text-align: center;
+        margin-top: 10rem;
+        bottom:500px;
+    }
+
+    .link{
+        position:absolute;
+        margin-top: 500px;
+        
+       
+      }
+    
+      .link:hover{
           width:175px;
           padding:30px;
           background-color: white;
